saint-lascivious.github.io: am i a web developer now? Changes to be committed:  - new file:   images/favicon.ico    (get wurmed)  - modified:   index.html    attempt some basic html/css formatting    add title    add favicon    (get wurmed)    add github link    add contact mailto link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
+<!--        sainternet.xyz index.html        -->
+<!-- saint-lascivious (Hayden Pearce), ©2022 -->
+<!DOCTYPE html>
+<html>
 
-<p align="center">sainternet.xyz</p>
+<head>
+    <title>sainternet.xyz</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+<body>
 
+<h1><p style="font-family:courier; font-size:300%; text-align:center;">sainternet.xyz</p></h1>
 
+<p style="font-family:courier; font-size:150%; text-align:center;">
+    Private filtered DNS over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
+</p>
 
-<p align="right"><sup><sub>saint-lascivious (Hayden Pearce), ©2022</sub></sup></p>
+<p style="font-family:courier; text-align:left;">
+    <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a>
+    <span style="float:right;">
+        <a href="https://github.com/saint-lascivious">saint-lascivious</a> (Hayden Pearce), <sup><sub><b>©2022</b></sub></sup>
+    </span>
+</p>
+
+</body>
+</html>
