saint-lascivious.github.io: adjust text, text size, formatting
Changes to be committed:
 - modified:   index.html
   adjust text, text size, formatting

--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>sainternet.xyz</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            }
-    </style>
+  <title>sainternet.xyz</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
 </head>
 <body>
-    <h1><p style="font-family:courier; font-size:300%; text-align:center;">sainternet.xyz</p></h1>
+  <h1>
     <p style="font-family:courier; font-size:150%; text-align:center;">
-        Private, zero logging, filtering, recursive DNS resolution served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
+      sainternet.xyz
     </p>
-    <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-    <p style="font-family:courier; text-align:left;">
-        <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a>
-        <span style="font-family:courier; float:right;">
-            <a href="https://github.com/saint-lascivious">saint-lascivious</a>, <sup>©2022</sup>
-        </span>
-    </p>
+  </h1>
+  <p style="font-family:courier; font-size:150%; text-align:center;">
+    Private, zero logging, validating, recursive, caching, filtering DNS resolution served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
+  </p>
+  <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+  <p style="font-family:courier; font-size:150%; text-align:center;">
+    <a href="mailto:saint@sainternet.xyz">
+      saint@sainternet.xyz
+    </a>
+  </p>
 </body>
 </html>
