saint-lascivious.github.io: sPeCiFiCaTiOn CoMpLiAnT
Changes to be committed:
 - modified:   index.html
   sPeCiFiCaTiOn CoMpLiAnT

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
   </h1>
   <p style="font-family:courier; font-size:150%; text-align:center;">
-    Private, zero logging, validating, recursive, caching, filtering DNS resolution served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
+    Private, zero logging, validating, recursive, caching, filtering, <i>mostly</i> specification compliant DNS resolvers served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
   </p>
   <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
   <p style="font-family:courier; font-size:150%; text-align:center;">
