saint-lascivious.github.io: add paragraph
Changes to be committed:
 - modified:   index.html
   add paragraph

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   </p>
   <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
   <p style="font-family:courier; font-size:150%; text-align:center;">
+    Home of the <i>world's first</i> (and only?) DNS driven TXT record based National Pokédex!
+  </p>
+  <p style="font-family:courier; font-size:150%; text-align:center;">
     <a href="mailto:saint@sainternet.xyz">
       saint@sainternet.xyz
     </a>
