--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
       sainternet.xyz
     </p>
   </h1>
-  <p style="font-family:courier; font-size:150%; text-align:center;">
+  <p style="font-family:courier; font-size:100%; text-align:center;">
+    Breaking the internet since 2016.
+ </p>
+  <p style="font-family:courier; font-size:120%; text-align:center;">
     Private, zero logging, validating, recursive, caching, filtering, <i>mostly</i> specification compliant DNS resolvers served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
   </p>
   <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-  <p style="font-family:courier; font-size:150%; text-align:center;">
+  <p style="font-family:courier; font-size:120%; text-align:center;">
     Home of the <i>world's first</i> (and only?) DNS driven TXT record based National Pokédex!
   </p>
-  <p style="font-family:courier; font-size:150%; text-align:center;">
-    <a href="mailto:saint@sainternet.xyz">
+  <p style="font-family:courier; font-size:120%; text-align:center;">
+    Contact: <a href="mailto:saint@sainternet.xyz">
       saint@sainternet.xyz
     </a>
   </p>
