saint-lascivious.github.io: change font & misc. additional changes
Changes to be committed:
 - modified:   index.html
   change font & misc. additional changes
   specify en-NZ
   horizontal rules
   line break

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--        sainternet.xyz index.html        -->
 <!-- saint-lascivious (Hayden Pearce), ©2022 -->
 <!DOCTYPE html>
-<html>
+<html lang="en-NZ">
 <head>
   <title>sainternet.xyz</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
@@ -16,24 +16,28 @@
 </head>
 <body>
   <h1>
-    <p style="font-family:courier; font-size:120%; text-align:center;">
+    <p style="font-family:verdana; font-size:120%; text-align:center;">
       sainternet.xyz
     </p>
   </h1>
-  <p style="font-family:courier; font-size:100%; text-align:center;">
-    Breaking the internet since 2016.
- </p>
-  <p style="font-family:courier; font-size:120%; text-align:center;">
-    Private, zero logging, validating, recursive, caching, filtering, <i>mostly</i> specification compliant DNS resolvers served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
+  <h3>
+    <p style="font-family:verdana; font-size:100%; text-align:center;">
+      <i>…breaking the internet since 2016.</i>
+    </p>
+  </h3>
+  <hr>
+  <p style="font-family:verdana; font-size:120%; text-align:center;">
+    Private, zero logging, validating, recursive, caching, filtering, <i>mostly</i> specification compliant DNS (<a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>) resolution served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
   </p>
+  <!-- get wurmed -->
   <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-  <p style="font-family:courier; font-size:120%; text-align:center;">
+  <p style="font-family:verdana; font-size:120%; text-align:center;">
     Home of the <i>world's first</i> (and only?) DNS driven TXT record based National Pokédex!
   </p>
-  <p style="font-family:courier; font-size:120%; text-align:center;">
-    Contact: <a href="mailto:saint@sainternet.xyz">
-      saint@sainternet.xyz
-    </a>
+  <br>
+  <hr>
+  <p style="font-family:verdana; font-size:120%; text-align:center;">
+    Contact: <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a>
   </p>
 </body>
 </html>
