saint-lascivious.github.io: add sample terminal image, misc text
Changes to be committed:
 - new file:   images/terminal.png
   add sample terminal image
   (featuring nslookup)
 - modified:   index.html
   misc text
   (change subheading to h6)
   (fiddle with description yet again)

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
       sainternet.xyz
     </p>
   </h1>
-  <h3>
+  <h6>
     <p style="font-family:verdana; font-size:100%; text-align:center;">
-      <i>…breaking the internet since 2016.</i>
+      <i>…breaking the internet, since 2016.</i>
     </p>
-  </h3>
+  </h6>
   <hr>
   <p style="font-family:verdana; font-size:120%; text-align:center;">
-    Private, zero logging, validating, recursive, caching, filtering, <i>mostly</i> specification compliant DNS (<a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>) resolution served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at <b>dns.sainternet.xyz</b>
+    Validating, recursive, caching, <i>mostly</i> specification compliant filtered DNS (<a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>) resolution with a zero logging policy served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at the <b>dns.sainternet.xyz</b> subdomain.
   </p>
   <!-- get wurmed -->
   <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
   <p style="font-family:verdana; font-size:120%; text-align:center;">
     Home of the <i>world's first</i> (and only?) DNS driven TXT record based National Pokédex!
   </p>
+  <!-- get termed -->
+  <img src="/images/terminal.png" alt="nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:60%;">
   <br>
   <hr>
   <p style="font-family:verdana; font-size:120%; text-align:center;">
