saint-lascivious.github.io: slight refactoring
Changes to be committed:
 - modified:   index.html
   update meta info
   add header, footer, main, article, address, etc.
   edit dns.sainternet.xyz nameserver definition yet again
   add a buttload of acronym definition links
   embiggen terminal.png

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <head>
   <title>sainternet.xyz</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <meta name="author" content="saint-lascivious (Hayden Pearce)">
+  <meta name="charset" content="UTF-8">
+  <meta name="description" content="sainternet.xyz">
+  <meta name="keywords" content="dns, DNS, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, sainternet.xyz">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     img {
@@ -12,9 +16,15 @@
       margin-left: auto;
       margin-right: auto;
     }
+    footer {
+      font-family:verdana;
+      font-size:120%;
+      text-align:center;
+    }
   </style>
 </head>
 <body>
+<header>
   <h1>
     <p style="font-family:verdana; font-size:120%; text-align:center;">
       sainternet.xyz
@@ -25,21 +35,29 @@
       <i>…breaking the internet, since 2016.</i>
     </p>
   </h6>
+</header>
+<main>
   <hr>
-  <p style="font-family:verdana; font-size:120%; text-align:center;">
-    Validating, recursive, caching, <i>mostly</i> specification compliant filtered DNS (<a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>) resolution with a zero logging policy served over HTTPS, HTTP3, TCP, TLS, UDP, QUIC, and possibly other acronyms available at the <b>dns.sainternet.xyz</b> subdomain.
-  </p>
+  <article>
+    <p style="font-family:verdana; font-size:120%; text-align:center;">
+      Validating, recursive, caching, <i>mostly</i> specification compliant, Android Private <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> compatible, filtering nameservers with a zero logging policy served over <a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a>, <a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a>, <a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a>, <a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a>, <a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a>, <a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a>, and possibly other acronyms available at the <b>dns.sainternet.xyz</b> subdomain.
+    </p>
+  </article>
   <!-- get wurmed -->
-  <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-  <p style="font-family:verdana; font-size:120%; text-align:center;">
-    Home of the <i>world's first</i> (and only?) DNS driven TXT record based National Pokédex!
-  </p>
-  <!-- get termed -->
-  <img src="/images/terminal.png" alt="nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:60%;">
-  <br>
+  <article>
+    <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+    <p style="font-family:verdana; font-size:120%; text-align:center;">
+      Home of the <i>world's first</i> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex!
+    </p>
+    <!-- get termed -->
+    <img src="/images/terminal.png" alt="nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:80%;">
+  </article>
   <hr>
-  <p style="font-family:verdana; font-size:120%; text-align:center;">
+</main>
+<footer>
+  <address>
     Contact: <a href="mailto:saint@sainternet.xyz">saint@sainternet.xyz</a>
-  </p>
+  </address>
+</footer>
 </body>
 </html>
