--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
       margin-right: auto;
     }
     footer {
-      font-family: verdana;
+      font-family: arial;
       font-size: 120%;
       text-align: center;
     }
     table {
-      font-family: verdana;
+      font-family: arial;
       border-collapse: collapse;
       width: 100%;
     }
     td {
-      font-family:verdana;
-      font-size:120%;
+      font-family: arial;
+      font-size: 100%;
       border: 1px solid #dddddd;
       text-align: center;
       padding: 8px;
     }
     th {
-      font-family:verdana;
-      font-size:120%;
+      font-family: arial;
+      font-size: 100%;
       border: 2px solid #dddddd;
       text-align: center;
       padding: 8px;
@@ -45,12 +45,12 @@
 <body>
 <header>
   <h1>
-    <p style="font-family:verdana; font-size:120%; text-align:center;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
       sainternet.xyz
     </p>
   </h1>
   <h6>
-    <p style="font-family:verdana; font-size:100%; text-align:center;">
+    <p style="font-family:arial; font-size:100%; text-align:center;">
       <i>…breaking the internet, since 2016.</i>
     </p>
   </h6>
@@ -59,11 +59,11 @@
   <hr>
   <article>
   <h3>
-    <p style="font-family:verdana; font-size:120%; text-align:center;">
-      Private DNS
+    <p style="font-family:arial; font-size:120%; text-align:center;">
+      Sainternet DNS
     </p>
   </h3>
-    <p style="font-family:verdana; font-size:120%; text-align:center;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
       Sainternet offers a validating, recursive, caching, <i>mostly</i> specification compliant, filtering <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> server with a zero logging policy served over all your favourite acronyms (and some you've probably never heard of before).
     </p>
     <table>
@@ -103,19 +103,19 @@
         <td>UDP 784<br>UDP 853<br>UDP 8853</td>
       </tr>
     </table>
-    <p style="font-family:verdana; font-size:120%; text-align:center;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
       Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
     </p>
   </article>
   <!-- get wurmed -->
   <article>
   <h3>
-    <p style="font-family:verdana; font-size:120%; text-align:center;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
       National Pokédex-over-DNS
     </p>
   </h3>
     <img src="/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-    <p style="font-family:verdana; font-size:120%; text-align:center;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
       Sainternet is home to the <i>world's first</i> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex!
     </p>
     <!-- get termed -->
