saint-lascivious.github.io: fix header, attempt basic 404
Changes to be committed:
 - new file:   404.html
   attempt basic 404
 - modified:   index.html
   fix header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <style>
     h1 {
       font-family: arial;
-      font-size: 10vw;
+      font-size: 12vw;
       line-height: 0vw;
       text-align: center;
     }
@@ -67,7 +67,9 @@
     sainternet.xyz
   </h1>
   <p1>
-    <b><i>…breaking the internet, since 2016.</i></b>
+    <p>
+      <b><i>…breaking the internet, since 2016</i></b>
+    </p>
   </p1>
   <hr>
 </header>
