saint-lascivious.github.io: change header/styles
Changes to be committed:
 - modified:   index.html
   change header/styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
   <style>
     h1 {
       font-family: arial;
-      font-size: 12vw;
+      font-size: 14vw;
+      line-height: 0vw;
+      text-align: center;
+    }
+    h2 {
+      font-family: arial;
+      font-size: 8vw;
       line-height: 0vw;
       text-align: center;
     }
@@ -32,6 +38,12 @@
     footer {
       font-family: arial;
       font-size: 120%;
+      text-align: center;
+    }
+    subheader {
+      font-family: arial;
+      font-size: 4vw;
+      line-height: 0vw;
       text-align: center;
     }
     table {
@@ -53,12 +65,6 @@
       text-align: center;
       padding: 8px;
     }
-    p1 {
-      font-family: arial;
-      font-size: 2vw;
-      line-height: 0vw;
-      text-align: center;
-    }
   </style>
 </head>
 <body>
@@ -66,19 +72,17 @@
   <h1>
     sainternet.xyz
   </h1>
-  <p1>
+  <subheader>
     <p>
       <b><i>…breaking the internet, since 2016</i></b>
     </p>
-  </p1>
+  </subheader>
   <hr>
 </header>
 <main>
   <article>
     <h2>
-      <p style="font-family:arial; font-size:120%; text-align:center;">
-        Sainternet DNS
-      </p>
+      Sainternet DNS
     </h2>
     <p style="font-family:arial; font-size:120%; text-align:center;">
       Sainternet offers a validating, recursive, caching, <i>mostly</i> specification compliant, filtering <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> server with a zero logging policy served over all your favourite acronyms.
@@ -127,19 +131,19 @@
   <article>
     <h2>
       <p style="font-family:arial; font-size:120%; text-align:center;">
-        Sainternet Pokédex-over-DNS
+        Pokédex-over-DNS
       </p>
     </h2>
-      <!-- get wurmed -->
-      <img src="/resources/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-      <p style="font-family:arial; font-size:120%; text-align:center;">
-        Sainternet is proud to present the <i>world's first</i> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex!
-      </p>
-      <!-- get termed -->
-      <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using the nslookup utility from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:90%;">
-      <p style="font-family:arial; font-size:120%; text-align:center;">
-        A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
-      </p>
+    <!-- get wurmed -->
+    <img src="/resources/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
+      Sainternet is proud to present the <i>world's first</i> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex!
+    </p>
+    <!-- get termed -->
+    <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using the nslookup utility from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:90%;">
+    <p style="font-family:arial; font-size:120%; text-align:center;">
+      A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
+    </p>
   </article>
 </main>
 <footer>
