saint-lascivious.github.io: relatively speaking
try using viewport relative scaling throughout

Changes to be committed:
 - modified:   404.html
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <title>sainternet.xyz</title>
   <!--  basic style magic  -->
   <style>
+    bodytext {
+      font-family: arial;
+      font-size: 4vw;
+      text-align: center;
+    }
     h1 {
       font-family: arial;
       font-size: 14vw;
@@ -37,7 +42,7 @@
     }
     footer {
       font-family: arial;
-      font-size: 120%;
+      font-size: 4vw;
       text-align: center;
     }
     subheader {
@@ -53,17 +58,17 @@
     }
     td {
       font-family: arial;
-      font-size: 100%;
-      border: 1px solid #dddddd;
+      font-size: 4vw;
+      border: 0.5vw solid #dddddd;
       text-align: center;
-      padding: 8px;
+      padding: 1vw;
     }
     th {
       font-family: arial;
-      font-size: 100%;
-      border: 2px solid #dddddd;
+      font-size: 4vw;
+      border: 0.5vw solid #757575;
       text-align: center;
-      padding: 8px;
+      padding: 1vw;
     }
   </style>
 </head>
@@ -84,9 +89,11 @@
     <h2>
       Sainternet DNS
     </h2>
-    <p style="font-family:arial; font-size:120%; text-align:center;">
-      Sainternet offers a validating, recursive, caching, <i>mostly</i> specification compliant, filtering <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> server with a zero logging policy served over all your favourite acronyms.
-    </p>
+    <bodytext>
+      <p>
+        Sainternet offers a validating, recursive, caching, <i>mostly</i> specification compliant, filtering <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> server with a zero logging policy served over all your favourite acronyms.
+      </p>
+    </bodytext>
     <table>
       <tr>
         <th>Protocol</th>
@@ -124,26 +131,32 @@
         <td>UDP 784<br>UDP 853<br>UDP 8853</td>
       </tr>
     </table>
-    <p style="font-family:arial; font-size:120%; text-align:center;">
-      Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
-    </p>
+    <bodytext>
+      <p>
+        Note: Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
+      </p>
+    </bodytext>
   </article>
   <article>
     <h2>
-      <p style="font-family:arial; font-size:120%; text-align:center;">
+      <p>
         Pokédex-over-DNS
       </p>
     </h2>
     <!-- get wurmed -->
     <img src="/resources/images/wurmple.png" alt="Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
-    <p style="font-family:arial; font-size:120%; text-align:center;">
-      Sainternet is proud to present the <i>world's first</i> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex!
-    </p>
+    <bodytext>
+      <p>
+        Sainternet is proud to present the <i>world's first</i> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT</a> record based National Pokédex!
+      </p>
+    </bodytext>
     <!-- get termed -->
     <img src="/resources/images/terminal.png" alt="Example Pokédex-over-DNS query using the nslookup utility from the command line: nslookup -type=txt wurmple.pokedex dns.sainternet.xyz" style="width:90%;">
-    <p style="font-family:arial; font-size:120%; text-align:center;">
-      A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
-    </p>
+    <bodytext>
+      <p>
+        A somewhat fun (<i>ab</i>)use of DNS enabling one to query a Pokémon species (currently supported: English) in order to receive its National Pokédex Number (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese Rōmaji).
+      </p>
+    </bodytext>
   </article>
 </main>
 <footer>
