--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     }
     footer {
       font-family: arial;
-      font-size: 120%;
+      font-size: 4vw;
       text-align: center;
     }
   </style>
