saint-lascivious.github.io: adjust text size limit
Changes to be committed:
 - modified:   404.html
   vw -> vmin where appropriate
 - modified:   index.html
   vw -> vmin where appropriate

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     }
     footer {
       font-family: arial;
-      font-size: 4vw;
+      font-size: 4vmin;
       text-align: center;
     }
   </style>
