--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <style>
     bodytext {
       font-family: arial;
-      font-size: 4vw;
+      font-size: 4vmin;
       text-align: center;
     }
     h1 {
@@ -42,7 +42,7 @@
     }
     footer {
       font-family: arial;
-      font-size: 4vw;
+      font-size: 4vmin;
       text-align: center;
     }
     subheader {
@@ -58,15 +58,15 @@
     }
     td {
       font-family: arial;
-      font-size: 4vw;
-      border: 0.5vw solid #dddddd;
+      font-size: 4vmin;
+      border: 0.5vmin solid #dddddd;
       text-align: center;
-      padding: 1vw;
+      padding: 1vmin;
     }
     th {
       font-family: arial;
-      font-size: 4vw;
-      border: 0.5vw solid #757575;
+      font-size: 4vmin;
+      border: 0.5vmin solid #757575;
       text-align: center;
       padding: 1vw;
     }
